--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Sistema_Ventas</string>
+    <string name="app_name">My Application</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="bienvenida">Autor: Diego Alvaro</string>
+    <string name="compra">Realizar Compra</string>
+    <string name="ingreso">Ingresar Producto</string>
+    <string name="lbltipo">Tipo: </string>
+    <string name="lblID">Código: </string>
+    <string name="lblnombre">Nombre: </string>
+    <string name="lblcosto">Costo:</string>
+
+    <string-array name="opciones">
+        <item>Selecciona...</item>
+        <item>Grupo de productos(frutas, verduras,etc)</item>
+        <item>Producto</item>
+    </string-array>
+    <string name="prodcodigo"></string>
+    <string name="prodnombre"></string>
+    <string name="prodcosto">0.00</string>
+    <string name="btnIngresar">Ingresar</string>
+    <string name="btnSalir">Salir</string>
+    <string name="intermedio">Elija una opcion</string>
+    <string name="btnprincipal">Grupo de Productos</string>
+    <string name="btnsecundario">Producto Unitario</string>
+    <string name="nombre">Seleccione</string>
+    <string name="iniciar">Iniciar</string>
 
 </resources>
