--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="prodcosto">0.00</string>
     <string name="btnIngresar">Ingresar</string>
     <string name="btnSalir">Salir</string>
-    <string name="intermedio">Elija una opcion</string>
+    <string name="intermedio">Administracion</string>
     <string name="btnprincipal">Grupo de Productos</string>
     <string name="btnsecundario">Producto Unitario</string>
     <string name="nombre">Seleccione</string>
